--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bulma": "^0.9.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vue3-cookies": "^1.0.6",
+    "xlsx": "^0.18.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
