--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "dependencies": {
     "bulma": "^0.9.3",
     "core-js": "^3.6.5",
+    "json-as-xlsx": "^2.3.10",
     "vue": "^3.0.0",
     "vue-router": "^3.5.3",
-    "vue3-cookies": "^1.0.6",
-    "xlsx": "^0.18.0"
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
